# finance-agent

./: .gitignore  ANDROID-BUILD.md  ARCHITECTURE.md  ASSUMPTIONS.md  DEPLOY.md  Dockerfile  MUST-HAVE.md  pyproject.toml  test_sms_parser.py
backend/: requirements.txt
backend/app/: auth.py  config.py  database.py  main.py  models.py  schemas.py
backend/app/parsers/: __init__.py  auto_detect.py  bank_parser.py  categorizer.py  credit_card_parser.py  ocr_fallback.py  upi_parser.py
backend/app/routers/: advisor.py  auth.py  budgets.py  cards.py  chat.py  expenses.py  gmail.py  settings.py  sms.py  upload.py
backend/app/services/: advisor.py  email_parser.py  gmail_sync.py  sms_parser.py  subscriptions.py  tracker.py
backend/tests/: conftest.py  test_api.py
finance_agent/: __init__.py  advisor.py  cli.py  models.py  storage.py  tracker.py
frontend/: capacitor.config.ts  package-lock.json  package.json
frontend/android/: capacitor.settings.gradle
frontend/android/app/: build.gradle  capacitor.build.gradle
frontend/android/app/src/main/java/com/skdev/moneyflow/: MainActivity.java
frontend/android/app/src/main/res/values/: strings.xml
frontend/src/: App.css  App.jsx
frontend/src/api/: client.js
frontend/src/auth/: AuthContext.jsx
frontend/src/pages/: AccountPage.jsx  Advisor.jsx  BudgetPage.jsx  Dashboard.jsx  Expenses.jsx  LoginPage.jsx  StatementsPage.jsx  UploadPage.jsx
frontend/src/services/: smsSync.js
tests/: test_advisor.py  test_tracker.py
